--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="content-wrapper">
+            <h2> Welcome to my portfolio </h2>
         <div class="top-section">
         <h1>Shahar Bar coding journey</h1>
         <a class= main-links href="./public/movierankingcomlete.html"> movie ranking</a> <br/> 
@@ -17,6 +19,7 @@
         <div class="bottom-section">
         <a class=small-links href="./public/about.html"> about me </a> <br/>
         <a class=small-links href="./public/contact.html"> contact me</a>
+        </div>
         </div>
     </body>
 </html>
