--- a/index.html
+++ b/index.html
@@ -1,113 +1,26 @@
-<!doctype html>
-<html lang="he" dir="rtl">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>מעגל גברים - תהליכי פרידה</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700&family=Heebo:wght@800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Esther's Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<section id="hero" class="py-5">
-    <div class="container text-center py-5">
-        <h1 class="display-4 fw-bold mb-4">מעגל גברים תהליכי פרידה</h1>
-        <h2 class="h4 text-secondary mb-5">גברים מדברים אמת על פרידה, גירושין ומה שבא אחריהם.</h2>
-        
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <p class="lead text-muted mb-5">
-                    הרגשת אי פעם לבד, מבולבל או דורך במקום אחרי פרידה או גירושין?<br>
-                    זה טבעי להרגיש ככה — אבל לא חייבים להתמודד עם זה לבד.<br>
-                    קבוצת התהליך שלנו יוצרת מרחב בטוח, כן ואמיתי, שבו תוכל לשתף, להקשיב, להתחזק ולבנות מחדש את עצמך ואת החיים שלך.
-                </p>
-            </div>
-        </div>
-        <div class="hero-image-container">
-            <img src="/circle.jpg" class="img-fluid rounded-4 shadow-sm" alt="מעגל גברים">
-        </div>
-    </div>
-</section>
-
-<section id="about" class="py-5">
-    <div class="container">
-        <h3 class="text-center mb-5 fw-bold">קצת עלינו</h3>
-        <div class="row g-4 justify-content-center">
-            <div class="col-md-5">
-                <div class="about-card d-flex align-items-center p-4">
-                    <img src="/raheli.jpg" class="profile-img me-3" alt="רחלי">
-                    <div>
-                        <h5 class="mb-1">רחלי</h5>
-                        <p class="mb-0 small text-muted">אמא ל-4, מנחת סדנאות לנשים וצוותי חינוך.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-5">
-                <div class="about-card d-flex align-items-center p-4">
-                    <img src="/raheli.jpg" class="profile-img me-3" alt="אסתר">
-                    <div>
-                        <h5 class="mb-1">אסתר</h5>
-                        <p class="mb-0 small text-muted">אמא ל-5, מנחה סדנאות ובהסבה מעולם ההייטק לטיפול.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-center mt-5">
-            <div class="col-lg-9 text-center">
-                <p class="description-text">
-                    נעים מאוד, אנחנו בנות זוג חברות לחיים ושותפות ליצירה... 
-                    (שאר הטקסט שלך)
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="content-details" class="py-5 bg-light-soft">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 mb-5">
-                <h3 class="fw-bold mb-4">למי הקבוצה מתאימה?</h3>
-                <ul class="custom-list">
-                    <li>גברים בעיצומו של תהליך פרידה/גירושין</li>
-                    <li>גברים אחרי פרידה או גירושין</li>
-                    <li>גברים חד־הוריים או בקשרי הורות משותפת</li>
-                    <li>גברים שרוצים לעבוד על חוסן רגשי ואינטימיות</li>
-                </ul>
-            </div>
-            <div class="col-md-6">
-                <h3 class="fw-bold mb-4">מה תעבור בתהליך?</h3>
-                <ul class="custom-list">
-                    <li>שיח רגשי אמיתי ומכבד</li>
-                    <li>תמיכה קבוצתית וליווי בוואטסאפ</li>
-                    <li>כלים להתמודדות עם כעס, אשמה ובדידות</li>
-                    <li>עבודה מקצועית ברוח עקרונות המובחנות</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section id="pricing" class="py-5 text-center">
-    <div class="container py-4">
-        <div class="pricing-box p-5 rounded-4 shadow-sm bg-white">
-            <h4 class="fw-bold mb-3">מחיר מיוחד לנרשמים מוקדמים</h4>
-            <div class="display-5 fw-bold text-primary mb-3">₪2,580</div>
-            <p class="text-muted">במקום ₪2,800 למצטרפים לאחר ה-25.02.26</p>
-            <p class="small mt-4">המרחב מוגבל כדי לשמור על אינטימיות. ההצטרפות מותנית בשאלון התאמה.</p>
-            <a href="tel:0584417897" class="btn btn-primary btn-lg px-5 py-3 mt-3 rounded-pill">להרשמה ופרטים נוספים</a>
-        </div>
-    </div>
-</section>
-
-<footer class="py-5 border-top">
-    <div class="container text-center">
-        <p class="mb-2">הסדנא תיפתח ביום שני ה-09.03.26 באזור ירושלים.</p>
-        <p class="fw-bold">לפרטים: 058-4417897 | 052-8345566</p>
-    </div>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <header>
+        <h1>Welcome to Esther's Page</h1>
+    </header>
+    <main>
+        <section>
+            <img src="/esther.jpg" alt="Image of Esther">
+            <h2>About Esther</h2>
+            <p>Esther is a talented artist who specializes in modern art. She finds inspiration in everyday life and transforms it into stunning works of art.</p>
+            <p>Her work has been displayed in various galleries across the country, and she continues to create unique pieces that resonate with many.</p>
+        </section>
+    </main>
+    <footer>
+        <p>Contact: info@estherart.com</p>
+        <p>&copy; 2026 Esther's Art Studio</p>
+    </footer>
 </body>
 </html>
